Save changes before submodule conversion
