# server/router/fit/fit_upload.go
@@ -10,8 +10,9 @@ type FITUploadRouter struct{}
 func (e *FITUploadRouter) InitFITUploadRouter(Router *gin.RouterGroup) {
 	fitUploadRouter := Router.Group("fit").Use(middleware.OperationRecord())
 	{
-		fitUploadRouter.POST("upload", fitFileUploadApi.UploadFitFile)        // 上传FIT文件
-		fitUploadRouter.GET("sessions", fitFileUploadApi.GetSessionList)      // 获取会话列表
-		fitUploadRouter.GET("session/:id", fitFileUploadApi.GetSessionDetail) // 获取会话详情
+		fitUploadRouter.POST("upload", fitFileUploadApi.UploadFitFile)           // 上传FIT文件
+		fitUploadRouter.POST("convert_to_csv", fitFileUploadApi.ConvertFitToCSV) // FIT转CSV
+		fitUploadRouter.GET("sessions", fitFileUploadApi.GetSessionList)         // 获取会话列表
+		fitUploadRouter.GET("session/:id", fitFileUploadApi.GetSessionDetail)    // 获取会话详情
 	}
 }
